fix: コードブロックのフォントを修正

--- a/src/pages/posts/stdout-spped.mdx
+++ b/src/pages/posts/stdout-spped.mdx
@@ -106,8 +106,8 @@ int main() {
 単位はミリ秒(ms)である。
 小数点以下は切り捨てる。
 
-| printf | fwrite | printf(_IOFBF) | fwrite(_IOFBF) |
-| ----- | ----- | ----- | ----- |
+| | printf | fwrite | printf(_IOFBF) | fwrite(_IOFBF) |
+| ----- | ----- | ----- | ----- | ----- |
 | 1 | 4992 | 2439 | 425 | 432 |
 | 2 | 6060 | 1919 | 542 | 430 |
 | 3 | 4722 | 2411 | 440 | 542 |
