fix: tableをスクロールできるように

--- a/src/pages/posts/stdout-spped.mdx
+++ b/src/pages/posts/stdout-spped.mdx
@@ -106,6 +106,7 @@ int main() {
 単位はミリ秒(ms)である。
 小数点以下は切り捨てる。
 
+<div class="sc">
 | | printf | fwrite | printf(_IOFBF) | fwrite(_IOFBF) |
 | ----- | ----- | ----- | ----- | ----- |
 | 1 | 4992 | 2439 | 425 | 432 |
@@ -114,6 +115,7 @@ int main() {
 | 4 | 6099 | 1876 | 544 | 461 |
 | 5 | 5080 | 1923 | 433 | 543 |
 | Average | 5390 | 2113 | 476 | 481 |
+</div>
 
 バッファリングなしでは圧倒的にfwriteが速く、バッファリングありでは両者大差ないという結果を得られた。
 
