--- a/src/pages/posts/shader-study.mdx
+++ b/src/pages/posts/shader-study.mdx
@@ -117,9 +117,11 @@ $$
 外積の結果が右ねじの法則に従うことに留意する。
 
 $$
-Z = v_{lookat} - v_{trs}\\
-X = Z \times v_{up}\\
-Y = X \times Z
+\begin{gather*}
+    Z = v_{lookat} - v_{trs}\\
+    X = Z \times v_{up}\\
+    Y = X \times Z
+\end{gather*}
 $$
 
 次に、座標軸とカメラ座標をもとにビュー行列を作る。
