--- a/src/pages/pages/index.mdx
+++ b/src/pages/pages/index.mdx
@@ -11,3 +11,4 @@ layout: "../../layouts/MdxLayout.astro"
     - [『なめらかな宇宙と、その敵。』解説](/pages/touhou/nameraka-na-uchuu-to-sono-teki)
 - その他
     - [観たアニメ](/pages/misc/watched-animes)
+    - [漫画創作論](/pages/misc/tips/comic)
