feat: ジャンルを追加

--- a/src/pages/posts/2023-summer.mdx
+++ b/src/pages/posts/2023-summer.mdx
@@ -1,7 +1,8 @@
 ---
 layout: ../../layouts/PostLayout.astro
 title: "地獄のような夏休みを越えて"
-tags: ["diary"]
+genre: "diary"
+tags: []
 date: "2023/10/16"
 ---
 import Image from "../../components/Image.astro";
