--- a/src/pages/posts/allocate-descriptor-sets.mdx
+++ b/src/pages/posts/allocate-descriptor-sets.mdx
@@ -1,6 +1,7 @@
 ---
 layout: ../../layouts/PostLayout.astro
 title: "VkDescriptorPoolSizeの誤りが検出されない"
+genre: "tech"
 tags: ["bug", "vulkan"]
 date: "2023/05/17"
 ---
