--- a/src/pages/posts/com-in-rust.mdx
+++ b/src/pages/posts/com-in-rust.mdx
@@ -1,6 +1,7 @@
 ---
 layout: ../../layouts/PostLayout.astro
 title: "COMの構造とRust FFIで扱う手法"
+genre: "tech"
 tags: ["rust", "windowsapi"]
 date: "2023/03/22"
 ---
