--- a/src/pages/posts/cppcli-invoke-deadlock.mdx
+++ b/src/pages/posts/cppcli-invoke-deadlock.mdx
@@ -1,6 +1,7 @@
 ---
 layout: ../../layouts/PostLayout.astro
 title: "Invokeとmutexによるデッドロック"
+genre: "tech"
 tags: [".net", "c++"]
 date: "2023/10/16"
 ---
