--- a/src/pages/posts/docker-gui-experiment.mdx
+++ b/src/pages/posts/docker-gui-experiment.mdx
@@ -1,6 +1,7 @@
 ---
 layout: ../../layouts/PostLayout.astro
 title: "Docker GUIアプリ実行検証"
+genre: "tech"
 tags: ["docker", "experiment", "wsl"]
 date: "2024/06/20"
 ---
