--- a/src/pages/posts/enum-windows.mdx
+++ b/src/pages/posts/enum-windows.mdx
@@ -1,6 +1,7 @@
 ---
 layout: ../../layouts/PostLayout.astro
 title: "ウィンドウアプリケーションの列挙"
+genre: "tech"
 tags: ["windowsapi"]
 date: "2023/02/14"
 ---
