--- a/src/pages/posts/iam-mml-release.mdx
+++ b/src/pages/posts/iam-mml-release.mdx
@@ -1,6 +1,7 @@
 ---
 layout: ../../layouts/PostLayout.astro
 title: "FM音源MMLコンパイラ「IAM.mml」"
+genre: "info"
 tags: ["information", "mml"]
 date: "2024/05/27"
 ---
