--- a/src/pages/posts/mirror-pc-to-android.mdx
+++ b/src/pages/posts/mirror-pc-to-android.mdx
@@ -1,6 +1,7 @@
 ---
 layout: ../../layouts/PostLayout.astro
 title: "ウィンドウをAndroidにミラーリング"
+genre: "tech"
 tags: ["android", "windowsapi"]
 date: "2024/02/07"
 ---
