--- a/src/pages/posts/oss-freeride.mdx
+++ b/src/pages/posts/oss-freeride.mdx
@@ -1,6 +1,7 @@
 ---
 layout: ../../layouts/PostLayout.astro
 title: "OSSのフリーライドについて"
+genre: "diary"
 tags: ["essay", "oss"]
 date: "2024/01/02"
 ---
