--- a/src/pages/posts/pico-blink.mdx
+++ b/src/pages/posts/pico-blink.mdx
@@ -1,7 +1,8 @@
 ---
 layout: ../../layouts/PostLayout.astro
 title: "Rasberry Pi PicoでLチカ"
-tags: ["embedded", "python", "rasberrypipico", "rust"]
+genre: "tech"
+tags: ["embedded", "python", "rasberrypi", "rust"]
 date: "2024/07/17"
 ---
 import Image from "../../components/Image.astro";
