--- a/src/pages/posts/shader-study.mdx
+++ b/src/pages/posts/shader-study.mdx
@@ -1,6 +1,7 @@
 ---
 layout: ../../layouts/PostLayout.astro
 title: "シェーダの基礎を学習"
+genre: "tech"
 tags: ["cg", "shader", "webgl"]
 date: "2023/12/15"
 ---
