--- a/src/pages/posts/solink-speed.mdx
+++ b/src/pages/posts/solink-speed.mdx
@@ -1,6 +1,7 @@
 ---
 layout: ../../layouts/PostLayout.astro
 title: "DLL・SOの暗黙的/動的リンクの速度比較"
+genre: "tech"
 tags: ["experiment", "os"]
 date: "2023/03/30"
 ---
