--- a/src/pages/posts/stdout-spped.mdx
+++ b/src/pages/posts/stdout-spped.mdx
@@ -1,6 +1,7 @@
 ---
 layout: ../../layouts/PostLayout.astro
 title: "printf vs fwrite"
+genre: "tech"
 tags: ["experiment"]
 date: "2023/03/20"
 ---
