--- a/src/pages/posts/swiftui-study.mdx
+++ b/src/pages/posts/swiftui-study.mdx
@@ -1,7 +1,8 @@
 ---
 layout: ../../layouts/PostLayout.astro
 title: "SwiftUIを学習"
-tags: ["iOS", "swift"]
+genre: "tech"
+tags: ["ios", "swift"]
 date: "2024/09/02"
 ---
 
