--- a/src/pages/posts/wgpu-simple-fps.mdx
+++ b/src/pages/posts/wgpu-simple-fps.mdx
@@ -1,6 +1,7 @@
 ---
 layout: ../../layouts/PostLayout.astro
 title: "wgpuでFPSゲーム開発"
+genre: "tech"
 tags: ["cg", "webgpu", "rust"]
 date: "2024/08/08"
 ---
