--- a/src/pages/posts/windows-to-ubuntu.mdx
+++ b/src/pages/posts/windows-to-ubuntu.mdx
@@ -1,7 +1,8 @@
 ---
 layout: ../../layouts/PostLayout.astro
 title: "WindowsからUbuntuへ"
-tags: ["diary", "os", "ubuntu"]
+genre: "diary"
+tags: ["os", "ubuntu"]
 date: "2022/11/22"
 ---
 import Image from "../../components/Image.astro";
