--- a/src/pages/posts/start.mdx
+++ b/src/pages/posts/start.mdx
@@ -1,7 +1,8 @@
 ---
 layout: ../../layouts/PostLayout.astro
 title: "ブログ開設"
-tags: ["information"]
+genre: "info"
+tags: []
 date: "2022/11/21"
 ---
 
