feat: 読書感想文を追加

--- a/src/pages/pages/index.mdx
+++ b/src/pages/pages/index.mdx
@@ -10,5 +10,6 @@ layout: "../../layouts/MdxLayout.astro"
     - [『幻想の行方』解説](/pages/touhou/gensou-no-yukue)
     - [『なめらかな宇宙と、その敵。』解説](/pages/touhou/nameraka-na-uchuu-to-sono-teki)
 - その他
+    - [読書感想文](/pages/misc/reading-report)
     - [観たアニメ](/pages/misc/watched-animes)
     - [漫画創作論](/pages/misc/tips/comic)
