--- a/src/pages/pages/misc/reading-report/papers/lcm.mdx
+++ b/src/pages/pages/misc/reading-report/papers/lcm.mdx
@@ -123,6 +123,8 @@ $$ \text{RO} = \lbrace n | n \text{に再計算を防ぎたい計算が含まれ
 
 
 
+<p style="text-align: right">■</p>
+
 <div style="text-align: center">
     [戻る](../../)
 </div>
