--- a/src/pages/pages/misc/reading-report/papers/regcpython.mdx
+++ b/src/pages/pages/misc/reading-report/papers/regcpython.mdx
@@ -81,6 +81,8 @@ Pythonの言語仕様(リフレクション)のせいで妥協した点がある
 
 
 
+<p style="text-align: right">■</p>
+
 <div style="text-align: center">
     [戻る](../../)
 </div>
