fix: mdxページのタイトルを追加

--- a/src/pages/pages/misc/reading-report/papers/kfcm.mdx
+++ b/src/pages/pages/misc/reading-report/papers/kfcm.mdx
@@ -1,5 +1,6 @@
 ---
 layout: ../../../../../layouts/MdxLayout.astro
+title: "Automated Kernel Fusion for GPU Based on Code"
 ---
 
 # Automated Kernel Fusion for GPU Based on Code
