--- a/src/pages/pages/misc/reading-report/papers/regcpython.mdx
+++ b/src/pages/pages/misc/reading-report/papers/regcpython.mdx
@@ -1,5 +1,6 @@
 ---
 layout: ../../../../../layouts/MdxLayout.astro
+title: "RegCPython: A Register-based Python Interpreter for Better Performance"
 ---
 
 # RegCPython: A Register-based Python Interpreter for Better Performance
