--- a/src/pages/pages/misc/reading-report/papers/rcsfdi.mdx
+++ b/src/pages/pages/misc/reading-report/papers/rcsfdi.mdx
@@ -1,5 +1,6 @@
 ---
 layout: ../../../../../layouts/MdxLayout.astro
+title: "Renamingless Capture-Avoiding Substitution for Definitional Interpreters"
 ---
 
 # Renamingless Capture-Avoiding Substitution for Definitional Interpreters
