--- a/src/pages/pages/misc/reading-report/index.mdx
+++ b/src/pages/pages/misc/reading-report/index.mdx
@@ -6,6 +6,7 @@ title: "読書感想文"
 # 読書感想文
 
 - 本
+  - [C++の設計と進化](./books/d-and-e/)
   - [リーダブルコード](./books/readable-code/)
 - 論文
   - [Automated Kernel Fusion for GPU Based on Code](./papers/kfcm/)
