feat: Effective C++を追加

--- a/src/pages/pages/misc/reading-report/index.mdx
+++ b/src/pages/pages/misc/reading-report/index.mdx
@@ -7,6 +7,7 @@ title: "読書感想文"
 
 - 本
   - [C++の設計と進化](./books/d-and-e/)
+  - [Effective C++](./books/effective-cpp/)
   - [リーダブルコード](./books/readable-code/)
 - 論文
   - [Automated Kernel Fusion for GPU Based on Code](./papers/kfcm/)
