fix: Hタグを修正

--- a/src/pages/posts/font-rendering.mdx
+++ b/src/pages/posts/font-rendering.mdx
@@ -8,7 +8,7 @@ date: "2024/12/16"
 
 _本記事は東京理科大学プログラミングサークル Advent Calendar 2024の16日目です。_
 
-# フォントレンダリング
+## フォントレンダリング
 
 ゲームにおいて、フォント内の文字を画面に表示することをフォントレンダリングと言う。
 このフォントレンダリングのためには、予め文字をテクスチャアトラスにラスタライズしておく必要がある。
