feat: Effective Rustを追加

--- a/src/pages/pages/misc/reading-report/index.mdx
+++ b/src/pages/pages/misc/reading-report/index.mdx
@@ -8,6 +8,7 @@ title: "読書感想文"
 - 本
   - [C++の設計と進化](./books/d-and-e/)
   - [Effective C++](./books/effective-cpp/)
+  - [Effective Rust](./books/effective-rust/)
   - [Tidy First?](./books/tidy-first/)
   - [リーダブルコード](./books/readable-code/)
 - 論文
