feat: Automatic Horizontal Fusion for GPU Kernelsを追加

--- a/src/pages/pages/misc/reading-report/index.mdx
+++ b/src/pages/pages/misc/reading-report/index.mdx
@@ -12,6 +12,7 @@ title: "読書感想文"
   - [Tidy First?](./books/tidy-first/)
   - [リーダブルコード](./books/readable-code/)
 - 論文
+  - [Automatic Horizontal Fusion for GPU Kernels](./papers/ahffgk/)
   - [Automated Kernel Fusion for GPU Based on Code](./papers/kfcm/)
   - [Lazy Code Motion](./papers/lcm/)
   - [RegCPython: A Register-based Python Interpreter for Better Performance](./papers/regcpython/)
