--- a/src/pages/pages/misc/reading-report/index.mdx
+++ b/src/pages/pages/misc/reading-report/index.mdx
@@ -7,6 +7,7 @@ title: "読書感想文"
 
 - 本
   - [C++の設計と進化](./books/d-and-e/)
+  - [Direct3D12 ゲームグラフィックス実践ガイド](./books/d3d12-prac-guide/)
   - [Effective C++](./books/effective-cpp/)
   - [Effective Rust](./books/effective-rust/)
   - [Tidy First?](./books/tidy-first/)
