fix: 文章を改善

--- a/src/pages/posts/bitmap-collision-with-gpu.mdx
+++ b/src/pages/posts/bitmap-collision-with-gpu.mdx
@@ -11,8 +11,7 @@ import Image from "../../components/Image.astro";
 
 <Image src="https://img.skdassoc.work/posts/bitmap-collision-with-gpu/01.gif" caption="シミュレーションの様子" />
 
-[だいぶ昔に行ったビットマップによる衝突判定実験](https://skdassoc.com/posts/bitmap-collision/)の続きです。
-衝突判定用のビットマップをDirect3D12を用いて行った場合、どのくらい速くなるのかをまとめた記事になります。
+[だいぶ昔に行ったビットマップによる衝突判定実験](https://skdassoc.com/posts/bitmap-collision/)の再検証です。
 
 前提として、この衝突判定は2DSTGに用いることを想定しています。
 
@@ -22,37 +21,36 @@ import Image from "../../components/Image.astro";
 
 
 
-## 問題点と対策
+## ビットマップによる衝突判定
 
-早速ですが、GPUを用いたビットマップによる衝突判定には幾つかの問題があります。
+2DSTGにおいて、物体の衝突判定を愚直に行うと $O(N^2)$ の探索が必要になります。
+そこで、予め物体の衝突判定領域をビットマップに描画しておき、衝突判定時に衝突相手の領域をそのビットマップから取得することで改善を図ります。
 
-まず、RGBAビットマップには多くの情報を記録できません。
-この性質のため、次の2点の問題を抱えます。
+ビットマップはGPUを用いて描画します。
+GPUを用いることで、高い並列性を得られるだけでなく、テクスチャマッピングが容易になるため、複雑な衝突判定領域も描画できるようになります。
+さらに、GPUが非同期に描画を行う都合上、垂直同期を取るのであれば、描画時間が16ミリ秒を超えない限り、その描画時間は無視できます。
 
-- 衝突相手のインスタンスを取得できない
-- 記録できる物体の種類が限られる (RGBAそれぞれに種類を割り当てる場合4種類)
+描画時間を無視できるということは、衝突判定のアルゴリズムの良し悪しでパフォーマンスが決まるということになります。
+RGBAビットマップからは衝突相手の存在性という情報しか得られません。
+そのため、正確な領域交差判定を行うためには、自身の領域を全探索する必要があります。
+ここで、結局 $O(N^2)$ の計算が発生します。
+特に、複雑な領域を探索する場合、自身の領域の内外判定が必要になり、それを嫌うならば各物体が自身の領域のビットマップを持つことになり、何かしらの効率が落ちます。
 
-一点目の問題は大した問題ではありません。
-例えば、領域内の敵弾を自ホーミング弾に変えるボムは、ボムの判定に衝突したら自ホーミング弾に変わるという性質を敵弾に備えれば解決します。
-
-二点目の問題も大した問題ではありません。
-2DSTGにおいて判定を持つべき物体は、敵・敵弾・自ボム・ボムであり、4種類で足ります。
-もし4種類で足りないならば、チャンネル数を上げるなり、ビットで管理するなりすれば解決します。
-
-また、GPUつまりグラフィックスAPIは非同期に描画を行います。
-この都合上、GPUが描画を行っている間に次フレームの計算を行います。
-そのため、次の問題を抱えます。
-
-- ビットマップには1フレーム前の位置情報が記録される
-
-この問題も大した問題ではありません。
-1フレーム前の状態も保存しておき、遡及的に衝突判定を行えば解決します。
+ということで、conservativityを完全に無視して、自身の領域を座標点あるいは枠線とみなすことでパフォーマンス向上を図ります。
+点とみなせば1回のビットマップ参照で衝突判定ができます。
+この場合、大きな物体と小さな物体が衝突したとき、小さな物体のみが衝突したと判定されます。
+しかし、例えば、自機と敵弾、敵とレーザー、弾消しボムと弾などはこのアルゴリズムを使えます。
+また、枠線とみなせば比較的少ない回数のビットマップ参照で衝突判定ができます。
+この場合、大きな物体の内部に小さな物体が入り込んだとき、衝突判定が行われません。
+しかし、よほど大小差がない限りはそこまで問題にはなりません。
+慎重に衝突判定アルゴリズムを決めることが重要です。
 
 
 
 ## 結果と考察
 
-前回同様、 $100, 500, 1000, 2000, 3000, 4000, 5000$ 個の物体(円)を2種類分作り、それぞれ1000フレーム間物理演算を行った結果を次に示します。
+GPUに描画を命令するAPIとしてDirect3D12、衝突判定領域として円、ビットマップ参照領域として円周を採用しました。
+それぞれ $100, 500, 1000, 2000, 3000, 4000, 5000$ 個の物体を2種類分作り、それぞれ1000フレーム間物理演算を行った結果を次に示します。
 
 <Image src="https://img.skdassoc.work/posts/bitmap-collision-with-gpu/02.png" caption="結果(全体)" />
 
@@ -65,24 +63,11 @@ import Image from "../../components/Image.astro";
 
 物体の数が500から750個の間に交差点があります。
 このことから、弾が600個程度ある状態でなければ実用的ではないと言うこともできる……というわけではありません。
-垂直同期を取るゲームを考えれば、GPUが非同期に描画を行う都合上、ビットマップの描画時間は無視して構いません。
-描画時間を無視した図を次に示します。
+前述の通り、描画時間は無視できるので、次の図のように見積もれます。
 
 <Image src="https://img.skdassoc.work/posts/bitmap-collision-with-gpu/04.png" caption="描画時間を除いた結果(部分)" />
 
 このことから、弾の数が少なくとも十分有用であることがわかります。
-
-また、描画時間を無視しても良いということは、逆に言えば、衝突判定のアルゴリズムの良し悪しでパフォーマンスが決まるとも言えます。
-物体の座標のみビットマップを参照すれば、 $O(1)$ で衝突判定が行えます。
-例えば、自機と敵弾、敵とレーザー、弾消しボムと弾などはこのアルゴリズムを使えます。
-
-ところで、前回の実験の円形判定の結果と比較すると、今回の結果は随分と良く出ています。
-実は、これにはトリックがあります。
-今回は円周上のピクセルのみビットマップを参照しています。
-前回は円上のすべてのピクセルについてビットマップを参照していたため、パフォーマンスが悪く出ていました。
-しかし、これは同じ大きさの物体しかなく・離れた場所に生成されることを良いことに実現しているのであり、例えば大きな円で同じことを行うと円の中の物体に対して衝突判定が下されないことになります。
-
-以上を踏まえて、とはいえ、衝突判定を表示できるというメリットもありますし、個人的には2DSTGを作るときは必須のテクニックかなと思います。
 
 
 ## 雑記
