fix: リンクを修正

--- a/src/pages/pages/misc/reading-report/books/code-that-fits.mdx
+++ b/src/pages/pages/misc/reading-report/books/code-that-fits.mdx
@@ -43,10 +43,11 @@ Mark Seemann. (2021). Code That Fits in Your Head: Heuristics for Software Engin
 1. リーダブルコード
 2. パラダイム
 3. 設計
-4. 技術選定
-5. マネジメント
+4. 開発手法
+5. 技術選定
+6. マネジメント
 
-個人的には、この手の本を探すと、1. 2. 4. 5.ばかりがありふれていて、3.が少ないように感じる。
+個人的には、この手の本を探すと、圧倒的に3.が少ないように感じる。
 誰でもオブジェクト分割の方法を知っているが、誰もパッケージ分割の方法を教えてくれない。
 時と場合に依ることなので解説しづらいというのは分かるのだが。
 そんなことでは経験がなければ中規模のソフトウェアすら開発できまい。
