--- a/src/pages/pages/misc/reading-report/index.mdx
+++ b/src/pages/pages/misc/reading-report/index.mdx
@@ -11,7 +11,7 @@ title: "読書感想文"
   - [Effective C++](./books/effective-cpp/)
   - [Effective Rust](./books/effective-rust/)
   - [Tidy First?](./books/tidy-first/)
-  - [脳に収まるコードの書き方](./code-that-fits/)
+  - [脳に収まるコードの書き方](./books/code-that-fits/)
   - [リーダブルコード](./books/readable-code/)
 - 論文
   - [Automatic Horizontal Fusion for GPU Kernels](./papers/ahffgk/)
