--- a/src/pages/pages/index.mdx
+++ b/src/pages/pages/index.mdx
@@ -5,12 +5,8 @@ title: "Pages"
 
 # Pages
 
-- 東方Project関連
-    - [クリア機体表](/pages/touhou/clear-table)
-    - [紙媒体で所有する・かつ既読の東方同人誌](/pages/touhou/fanbooks-i-have)
-    - [『幻想の行方』解説](/pages/touhou/gensou-no-yukue)
-    - [『なめらかな宇宙と、その敵。』解説](/pages/touhou/nameraka-na-uchuu-to-sono-teki)
-- その他
-    - [読書感想文](/pages/misc/reading-report)
-    - [観たアニメ](/pages/misc/watched-animes)
-    - [漫画創作論](/pages/misc/tips/comic)
+-  [東方Projectクリア機体表](/pages/touhou/clear-table)
+-  [『幻想の行方』解説](/pages/touhou/gensou-no-yukue)
+-  [『なめらかな宇宙と、その敵。』解説](/pages/touhou/nameraka-na-uchuu-to-sono-teki)
+-  [読書感想文](/pages/misc/reading-report)
+-  [観たアニメ](/pages/misc/watched-animes)
