fix: タグを修正

--- a/src/pages/posts/2023-summer.mdx
+++ b/src/pages/posts/2023-summer.mdx
@@ -1,8 +1,8 @@
 ---
 layout: ../../layouts/PostLayout.astro
 title: "地獄のような夏休みを越えて"
-genre: "diary"
-tags: []
+genre: "essay"
+tags: ["diary"]
 date: "2023/10/16"
 ---
 import Image from "../../components/Image.astro";
