--- a/src/pages/posts/oss-freeride.mdx
+++ b/src/pages/posts/oss-freeride.mdx
@@ -1,8 +1,8 @@
 ---
 layout: ../../layouts/PostLayout.astro
 title: "OSSのフリーライドについて"
-genre: "diary"
-tags: ["essay", "oss"]
+genre: "essay"
+tags: ["oss"]
 date: "2024/01/02"
 ---
 
