--- a/src/pages/posts/windows-to-ubuntu.mdx
+++ b/src/pages/posts/windows-to-ubuntu.mdx
@@ -1,7 +1,7 @@
 ---
 layout: ../../layouts/PostLayout.astro
 title: "WindowsからUbuntuへ"
-genre: "diary"
+genre: "tech"
 tags: ["os", "ubuntu"]
 date: "2022/11/22"
 ---
