fix: 記事を修正

--- a/src/pages/posts/nijigasaki.mdx
+++ b/src/pages/posts/nijigasaki.mdx
@@ -3,7 +3,7 @@ layout: ../../layouts/PostLayout.astro
 title: "俺は高咲侑ではなかったという話"
 genre: "essay"
 tags: []
-date: "2025/3/18"
+date: "2025/03/18"
 ---
 
 ## まえがき
@@ -34,7 +34,7 @@ date: "2025/3/18"
 ごちうさ 2なるものが新しい主人公で出たら意味がわかりません。
 とらドラ 2も千と千尋 2もSEKIRO 2も意味がわかりません。
 何でもそうです。
-その作品がどのパラメータに触れていようと、続編が出るときは受け入れ難いものです。
+その作品がどのパラメータに振れていようと、続編が出るときは受け入れ難いものです。
 （あくまで続編であって、OOライズ第X弾やスピンオフを含まない）
 
 私は前章の通り生粋のμ'sライバーではないため、Aqoursやそれ以降のIPが発表されたときのラブライバーの気持ちを語ることはできません。
