--- a/src/pages/posts/iam-mml-release.mdx
+++ b/src/pages/posts/iam-mml-release.mdx
@@ -2,7 +2,7 @@
 layout: ../../layouts/PostLayout.astro
 title: "FM音源MMLコンパイラ「IAM.mml」"
 genre: "info"
-tags: ["information", "mml"]
+tags: ["lang", "mml"]
 date: "2024/05/27"
 ---
 
