--- a/src/pages/pages/misc/reading-report/index.mdx
+++ b/src/pages/pages/misc/reading-report/index.mdx
@@ -11,6 +11,7 @@ title: "読書感想文"
   - [Effective C++](./books/effective-cpp/)
   - [Effective Rust](./books/effective-rust/)
   - [Tidy First?](./books/tidy-first/)
+  - [現場で役立つシステム設計の原則](./books/posa/)
   - [脳に収まるコードの書き方](./books/code-that-fits/)
   - [リーダブルコード](./books/readable-code/)
 - 論文
