feat: ゲームをテストするを追加

--- a/src/pages/pages/misc/reading-report/index.mdx
+++ b/src/pages/pages/misc/reading-report/index.mdx
@@ -12,6 +12,7 @@ title: "読書感想文"
   - [Effective Rust](./books/effective-rust/)
   - [Tidy First?](./books/tidy-first/)
   - [現場で役立つシステム設計の原則](./books/posa/)
+  - [ゲームをテストする](./books/game-test/)
   - [脳に収まるコードの書き方](./books/code-that-fits/)
   - [リーダブルコード](./books/readable-code/)
 - 論文
