fix: タグを修正

--- a/src/pages/posts/iam-mml-release.mdx
+++ b/src/pages/posts/iam-mml-release.mdx
@@ -1,8 +1,8 @@
 ---
 layout: ../../layouts/PostLayout.astro
 title: "FM音源MMLコンパイラ「IAM.mml」"
-genre: "info"
-tags: ["lang", "mml"]
+genre: "tech"
+tags: ["lang", "mml", "release"]
 date: "2024/05/27"
 ---
 
