--- a/src/pages/posts/fuzzy-release.mdx
+++ b/src/pages/posts/fuzzy-release.mdx
@@ -1,8 +1,8 @@
 ---
 layout: ../../layouts/PostLayout.astro
 title: "ジョークプログラミング言語「Fuzzy」"
-genre: "info"
-tags: ["lang"]
+genre: "tech"
+tags: ["lang", "release"]
 date: "2025/06/11"
 ---
 
