--- a/src/pages/posts/eigasaki2.mdx
+++ b/src/pages/posts/eigasaki2.mdx
@@ -174,7 +174,7 @@ MARVELを観ているのか？　
 重くて深い話を観たいなら閃光のハサウェイでも観れば良い話で。
 重くて深い話を観たいならスタァライトでも観れば良い話で。
 ──これは虹ヶ咲なのか？　
-ぼくは虹ヶ咲を求めていたのであって、ラノベではない。
+ぼくが求めていたのは虹ヶ咲であってラノベではない。
 
 えいがさき2章は過去最高のクオリティです。
 ただ、ぼくにとっては二次創作のように感ぜられたというだけです。
